Phase 2 & 3 Enhancements: Advanced Features & UX Improvements
 Phase 2 - Advanced Features:
- Enhanced price tracking with alerts, history, and multiple sources
- Advanced search filters (CMC, power/toughness, color, rarity, type, text, price, format)
- Comprehensive collection import/export (JSON, CSV, Deckbox, MTGO)

 Phase 3 - User Experience:
- Wishlist functionality with priority levels and budget tracking
- Enhanced collection statistics with interactive charts and insights
- Improved mobile responsiveness and touch optimization

 New Files:
- enhanced-price-tracker.js - Advanced price tracking system
- advanced-search-filters.js - Comprehensive search filtering
- wishlist-and-stats.js - Wishlist management and enhanced statistics
- mtg-rules-database.js - MTG rules reference system
- mtg-dictionary.js - MTG terminology dictionary
- collection-import-export.js - Multi-format import/export

 Updated Files:
- index.html - Integrated all new modules
- script.js - Enhanced core functionality
- styles.css - Mobile responsiveness improvements

 Features Added:
- Canvas-based charting for price history and collection stats
- Real-time price alerts with browser notifications
- Priority-based wishlist with budget constraints
- AI-generated collection insights
- Advanced Scryfall API integration
- PWA optimizations for mobile devices

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                 <span>MTG Collection Tracker</span>
             </div>
             <div class="nav-menu">
+                <button class="nav-btn admin-nav-btn" id="admin-nav-btn" style="display: none;">
+                    <i class="fas fa-radiation-alt"></i> Admin
+                </button>
                 <button class="nav-btn active" data-tab="collection">
                     <i class="fas fa-cards-blank"></i> Collection
                 </button>
@@ -57,6 +60,9 @@
                 </button>
                 <button class="nav-btn" data-tab="dictionary">
                     <i class="fas fa-spell-check"></i> Dictionary
+                </button>
+                <button class="nav-btn auth-btn" id="auth-btn">
+                    <i class="fas fa-user"></i> <span id="auth-btn-text">Sign In</span>
                 </button>
             </div>
         </nav>
@@ -383,9 +389,6 @@
                 </div>
             </div>
             <div class="user-actions">
-                <button class="btn btn-small btn-secondary" id="admin-panel-btn" style="display: none;">
-                    <i class="fas fa-cog"></i> Admin Panel
-                </button>
                 <button class="btn btn-small btn-secondary" id="logout-btn">
                     <i class="fas fa-sign-out-alt"></i> Logout
                 </button>
@@ -474,6 +477,12 @@
     </div>
 
     <script src="supabase-config.js"></script>
+    <script src="mtg-rules-database.js"></script>
+    <script src="mtg-dictionary.js"></script>
+    <script src="collection-import-export.js"></script>
+    <script src="enhanced-price-tracker.js"></script>
+    <script src="advanced-search-filters.js"></script>
+    <script src="wishlist-and-stats.js"></script>
     <script src="script.js"></script>
     <script src="price-tracker.js"></script>
     
