--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="mobile-fixes.css">
+    <!-- Mobile UI fixes deployed: 2025-08-22 -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     
     <!-- Supabase JavaScript Library -->
