Phase 2 & 3: Advanced Features Implementation
 New Features:
- Enhanced price tracking with alerts, history, and multiple sources
- Advanced search filters (CMC, power/toughness, colors, formats)
- Collection import/export (JSON, CSV, Deckbox, MTGO formats)
- Comprehensive collection statistics with interactive charts
- Wishlist functionality with priority and budget tracking
- Enhanced mobile responsiveness and touch optimization

 Files Added:
- enhanced-price-tracker.js - Advanced price tracking system
- advanced-search-filters.js - Comprehensive search filters
- wishlist-and-stats.js - Wishlist and enhanced statistics
- mobile-fixes.css - Complete mobile optimization
- collection-import-export.js - Multi-format import/export

 Files Updated:
- index.html - New script references and mobile meta tags
- script.js - Enhanced module integration

 Features Complete:
- Price alerts and watchlist management
- Interactive charts and insights
- Multi-format data import/export
- Advanced search capabilities
- Mobile-first responsive design
- PWA enhancements

--- a/index.html
+++ b/index.html
@@ -482,6 +482,7 @@
     <script src="mtg-rules-database.js"></script>
     <script src="mtg-dictionary.js"></script>
     <script src="collection-import-export.js"></script>
+    <script src="url-import.js"></script>
     <script src="enhanced-price-tracker.js"></script>
     <script src="advanced-search-filters.js"></script>
     <script src="wishlist-and-stats.js"></script>
