Deploy Complete Mobile UI Enhancement Suite
 Phase 2 & 3 Advanced Features Fully Integrated:

 Mobile-First UI Enhancements:
- Bottom navigation for mobile devices
- Touch-optimized components (48px minimum)
- Floating Action Button (FAB) with context actions
- Swipe gestures (left=delete, right=edit)
- Pull-to-refresh functionality
- Mobile-responsive modals and forms
- Haptic feedback integration
- Dark mode support with auto-detection

 Enhanced Price Tracking:
- Multi-source price aggregation (Scryfall, TCGPlayer, Card Kingdom, EDHREC)
- Interactive price charts with time periods
- Price alert system with notifications
- Historical price tracking

 Advanced Search & Filters:
- CMC and power/toughness range filters
- Color matching with multiple modes
- Format legality filters for all MTG formats
- Text search for oracle/flavor text, artist, keywords

 Collection Statistics & Insights:
- Interactive charts and breakdowns
- Smart collection insights
- Enhanced statistics dashboard

 Wishlist & Import/Export:
- Priority-based wishlist with budget tracking
- Multi-format support (JSON, CSV, Deckbox, MTGO)
- Drag-and-drop file uploads
- Import preview with statistics

 Technical Integration:
- Updated index.html with mobile UI includes
- Integrated MobileUIEnhanced class in script.js
- Comprehensive mobile-first CSS system
- Touch interaction and gesture handling

 Fully tested and operational on mobile devices

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="mobile-fixes.css">
-    <!-- Mobile UI fixes deployed: 2025-08-22 -->
+    <link rel="stylesheet" href="mobile-ui-enhanced.css">
+    <!-- Mobile UI enhancements deployed: 2025-08-22 -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     
     <!-- Supabase JavaScript Library -->
@@ -486,6 +487,7 @@
     <script src="enhanced-price-tracker.js"></script>
     <script src="advanced-search-filters.js"></script>
     <script src="wishlist-and-stats.js"></script>
+    <script src="mobile-ui-enhanced.js"></script>
     <script src="script.js"></script>
     <script src="price-tracker.js"></script>
     
