--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="mobile-fixes.css">
     <link rel="stylesheet" href="mobile-ui-enhanced.css">
+    <link rel="stylesheet" href="mobile-phone-optimized.css">
     <!-- Mobile UI enhancements deployed: 2025-08-22 -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     
@@ -488,6 +489,7 @@
     <script src="advanced-search-filters.js"></script>
     <script src="wishlist-and-stats.js"></script>
     <script src="mobile-ui-enhanced.js"></script>
+    <script src="mana-symbols.js"></script>
     <script src="script.js"></script>
     <script src="price-tracker.js"></script>
     
