Enhanced Import/Export with Animated Progress & Error Handling
 Visual Enhancements:
- Animated progress modal with card stack animation
- Real-time progress tracking with percentage and statistics
- Flowing arrow animations and pulsing collection box
- Gradient progress bar with shine effect

 Progress Tracking:
- Live import/skip/error counters
- Current card being processed display
- Batch processing with performance metrics
- Total time tracking for import completion

 Error Handling:
- Detailed error popup modals with card-specific errors
- Copy error details to clipboard functionality
- Auto-dismissing error notifications
- Comprehensive error logging and reporting

 Success Feedback:
- Animated success modal with checkmark animation
- Import completion statistics (imported/skipped/errors/time)
- Quick action buttons to view collection
- Auto-dismissing success notifications

 Mobile Optimized:
- Ultra-compact progress indicators for phones
- Touch-friendly error and success modals
- Responsive animations that work on small screens
- Performance optimized for mobile devices

 Technical Improvements:
- Enhanced bulk import performance with batching
- Better memory management for large collections
- Improved API rate limiting and error recovery
- Comprehensive CSS animations and transitions

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="mobile-fixes.css">
     <link rel="stylesheet" href="mobile-ui-enhanced.css">
     <link rel="stylesheet" href="mobile-phone-optimized.css">
+    <link rel="stylesheet" href="import-progress-styles.css">
     <!-- Mobile UI enhancements deployed: 2025-08-22 -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     
