Enhanced mobile responsiveness and PWA configuration
- Updated manifest.json with new purple theme (#4b0082) and dark background
- Enhanced modal styling for better mobile experience (90vw width, 80vh max-height, scrollable)
- Added dark mode support with prefers-color-scheme media query
- Updated theme colors in HTML files to match manifest
- Verified viewport meta tags across all HTML files
- Improved overall mobile user experience and PWA functionality

--- a/terms.html
+++ b/terms.html
@@ -7,7 +7,7 @@
     
     <!-- PWA Meta Tags -->
     <meta name="description" content="Terms of Service and Legal Disclaimers for MTG Collection Tracker">
-    <meta name="theme-color" content="#66BB6A">
+    <meta name="theme-color" content="#4b0082">
     <meta name="background-color" content="#E6F3FF">
     
     <!-- Stylesheets -->
