Add enhanced deck builder with synergy engine and UI improvements

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     
     <!-- Stylesheets -->
     <link rel="stylesheet" href="deckforge.css">
+    <link rel="stylesheet" href="enhanced-deck-builder.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     
     <!-- Supabase JavaScript Library -->
@@ -560,6 +561,7 @@
     <script src="mana-overlay.js"></script>
     <script src="card-scanner.js"></script>
     <script src="deck-builder.js"></script>
+    <script src="enhanced-deck-builder.js"></script>
     <script src="deck-qr-integration.js"></script>
     <script src="swipeable-ui.js"></script>
     <script src="deckforge.js"></script>
