feat: Add enhanced QR code styling and deck history tracking
- Implement archetype-based QR code styling with qr-code-styling library
- Add comprehensive deck history tracking system with Supabase integration
- Create deck history UI components with timeline and statistics
- Add deck action logging for created, shared, received, and imported decks
- Include database schema for deck_history table with RLS policies
- Integrate history tracking into QR code generation and import flows
- Add deck statistics calculation and archetype detection
- Create responsive deck history interface in settings section

--- a/index.html
+++ b/index.html
@@ -563,6 +563,7 @@
     <script src="deck-builder.js"></script>
     <script src="enhanced-deck-builder.js"></script>
     <script src="deck-qr-integration.js"></script>
+    <script src="deck-history.js"></script>
     <script src="swipeable-ui.js"></script>
     <script src="deckforge.js"></script>
     <script src="script.js"></script>
