Fix JavaScript errors and improve app functionality
- Add missing 'show-variations' checkbox to search section
- Add getDeckStats method to DeckBuilder class with safety checks
- Fix timing issues with deck builder initialization
- Improve error handling in deckforge.js
- Ensure search functionality works properly with live preview
- All major JavaScript errors resolved, app now runs smoothly

--- a/index.html
+++ b/index.html
@@ -174,6 +174,10 @@
                     <select id="search-set-filter" class="filter-select">
                         <option value="">All Sets</option>
                     </select>
+                    <label class="checkbox-option">
+                        <input type="checkbox" id="show-variations">
+                        <span>Show all variations</span>
+                    </label>
                     <button class="search-btn" id="search-btn">Search</button>
                 </div>
                 
