Add Vercel Speed Insights integration for performance monitoring

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
     
     <!-- Blockhash for image duplicate detection -->
     <script src="https://cdn.jsdelivr.net/npm/blockhash-core@1.0.0/dist/blockhash.min.js"></script>
+    
+    <!-- Vercel Speed Insights -->
+    <script>
+        window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/speed-insights/script.js"></script>
 </head>
 <body>
     <div class="container">
