Fix theme conflicts and secure Supabase integration
- Remove conflicting CSS files to ensure only Crimson Arcana theme loads
- Update Supabase config to use environment variables for security
- Keep only essential CSS files: theme-crimson-arcana.css, enhanced-mtg-card.css, synergy-meter.css, mobile-phone-optimized.css
- Configure for Vercel deployment with VITE_SUPABASE_URL and VITE_SUPABASE_ANON_KEY

--- a/index.html
+++ b/index.html
@@ -27,18 +27,13 @@
     <link rel="icon" type="image/png" sizes="32x32" href="icons/icon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icons/icon-16x16.png">
     
-    <!-- Stylesheets - Crimson Arcana Theme -->
+    <!-- Stylesheets - Crimson Arcana Theme Only -->
     <link rel="stylesheet" href="theme-crimson-arcana.css">
+    <!-- Enhanced components that work with Crimson Arcana -->
     <link rel="stylesheet" href="enhanced-mtg-card.css">
-    <link rel="stylesheet" href="enhanced-deck-builder.css">
-    <link rel="stylesheet" href="mobile-ui-enhanced.css">
     <link rel="stylesheet" href="synergy-meter.css">
-    <link rel="stylesheet" href="mobile-fixes.css">
+    <!-- Mobile optimizations for Crimson Arcana -->
     <link rel="stylesheet" href="mobile-phone-optimized.css">
-    <link rel="stylesheet" href="import-progress-styles.css">
-    <link rel="stylesheet" href="rules-dictionary-styles.css">
-    <link rel="stylesheet" href="ar-preview.css">
-    <link rel="stylesheet" href="admin-deployment.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     
     <!-- Supabase JavaScript Library -->
