--- a/index.html
+++ b/index.html
@@ -27,11 +27,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="icons/icon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icons/icon-16x16.png">
     
-    <!-- Stylesheets - Crimson Arcana Theme Only -->
+    <!-- Stylesheets - Pure Crimson Arcana Theme Only -->
     <link rel="stylesheet" href="theme-crimson-arcana.css">
-    <!-- Enhanced components that work with Crimson Arcana -->
-    <link rel="stylesheet" href="enhanced-mtg-card.css">
-    <link rel="stylesheet" href="synergy-meter.css">
     <!-- Mobile optimizations for Crimson Arcana -->
     <link rel="stylesheet" href="mobile-phone-optimized.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
